Bug #1052
ttymon crashes in a loop when non-existent user logs out
Start date:
2011-05-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
I recently logged in on the console, changed my uid (in /etc/passwd), and then logged out.
After logging out, ttymon crashed in a fast loop:
% ls -l /var/cores/0.tty* | wc -l 155
sudo pstack /var/cores/0.ttymon.17163-1305856103 core '/var/cores/0.ttymon.17163-1305856103' of 17163: /usr/lib/saf/ttymon -g -d /dev/console -l console -m ldterm,ttcompat - fedc6dae is_login_user (ff99, 80477b0, fef75880, fedc6e55) + 9e fedc6ede dir_dev_acc (80693e0, 80476d4, 0, 0, 180, 80477b0) + 9a fedc719b dir_dev_acc (8066c38, 80476cf, 0, 0, 180, 80477b0) + 357 fedc719b dir_dev_acc (feddf88c, 80476cb, 0, 0, 180, 80477b0) + 357 fedc684f logindevperm (8047eba, 0, 0, 0) + 2fb fedc7430 di_devperm_logout (8047eba, 8065708, 8047eba, 0) + 44 08053fb6 open_device (8065708, 8065708, 8047d88, 8059eaa) + 1de 08059eca ttymon_express (b, 8047ddc, 80656d8, 80536a8) + 1e6 080537e4 main (b, 8047ddc, 8047e0c, feffbafc) + 148 0805360d _start (b, 8047ea0, 8047eb4, 8047eb7, 8047eba, 8047ec7) + 7d
The only way to halt the crash loop was to re-add a user with the problem uid to the system (that is, the 0xff99 uid).
Updated by Rich Lowe almost 10 years ago
- Status changed from New to Resolved
- Assignee set to Gary Mills
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13381 commit:baff3bb71074