1052 ttymon crashes in a loop when non-existent user logs out Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Garrett D'Amore <garrett@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>